--- a/src/app/meal-form/meal-form.component.html
+++ b/src/app/meal-form/meal-form.component.html
@@ -1,1 +1,19 @@
-<p>meal-form works!</p>
+<h6>Input you favourite foods</h6>
+<form (ngSubmit)="submitMeal()" #mealForm="ngForm"> 
+  <div class="form-group">
+    <label for="mealname">Name of food</label>
+    <input type="text" class="form-control" id="mealName" aria-describedby="emailHelp" placeholder="">
+    
+  </div>
+  <div class="form-group">
+    <label for="calories">Calories</label>
+    <input type="number" class="form-control" id="calories" aria-describedby="emailHelp" placeholder="">
+    
+  </div>
+  <div class="form-group">
+    <label for="details">Food details</label>
+    <textarea type="textarea" class="form-control" id="details" placeholder=""></textarea>
+  </div>
+  
+  <button type="submit" class="btn btn-dark">Submit</button>
+</form>
